--- a/exercises/sausage-dog-new-game/index.html
+++ b/exercises/sausage-dog-new-game/index.html
@@ -15,6 +15,7 @@
 
     <!-- My script(s) -->
     <script src="js/Insect.js"></script>
+    <script src="js/Spider.js"></script>
     <script src="js/script.js"></script>
   </head>
 
