--- a/exercises/slamina-new-game/index.html
+++ b/exercises/slamina-new-game/index.html
@@ -13,9 +13,10 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=g4f5TY0T"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script> 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/TimeBar.js"></script>
     <script src="js/script.js"></script>
   </head>
 
