--- a/projects/project1-test/index.html
+++ b/projects/project1-test/index.html
@@ -23,7 +23,7 @@
 
     <!-- My script(s) -->
     <script src="js/LibraryRoom.js"></script>
-    <script src="js/Mirror.js"></script>
+    <script src="js/Mirror/MirrorSmall.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
     <script src="js/script.js"></script>
