--- a/projects/project1-test/index.html
+++ b/projects/project1-test/index.html
@@ -22,8 +22,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/LibraryRoom.js"></script>
+    <script src="js/Mirror/SpeakingMirror.js"></script>
     <script src="js/Mirror/MirrorSmall.js"></script>
+    <script src="js/LibraryRoom.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
     <script src="js/script.js"></script>
