--- a/projects/project1-test/index.html
+++ b/projects/project1-test/index.html
@@ -24,6 +24,7 @@
     <!-- My script(s) -->
     <script src="js/Mirror/SpeakingMirror.js"></script>
     <script src="js/Mirror/MirrorSmall.js"></script>
+    <script src="js/Fireplace.js"></script>
     <script src="js/LibraryRoom.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
