--- a/projects/project1-test/index.html
+++ b/projects/project1-test/index.html
@@ -26,6 +26,7 @@
     <script src="js/Mirror/MirrorSmall.js"></script>
     <script src="js/Fireplace.js"></script>
     <script src="js/LibraryRoom.js"></script>
+    <script src="js/WineGlass.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
     <script src="js/script.js"></script>
