--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -20,6 +20,7 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/BloodBottle.js"></script>
     <script src="js/ForestBackground.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
