P1: added a class for the eye, made it appear after the user clicks on it

--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -22,6 +22,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Eye.js"></script>
     <script src="js/BloodBottle.js"></script>
     <script src="js/ForestBackground.js"></script>
     <script src="js/Prologue.js"></script>
