P1: created a class and displayed statue scene

--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -22,6 +22,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Statue.js"></script>
     <script src="js/BlueBird.js"></script>
     <script src="js/HummingBird.js"></script>
     <script src="js/BloomingFLower.js"></script>
