P1: tried to duplicate the same file to see if the browser detects js file

--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -28,7 +28,8 @@
     <script src="js/Eclipse.js"></script>
     <script src="js/Eye.js"></script>
     <script src="js/HummingBird.js"></script>
-    <script src="js/BloomingFLower.js"></script>
+    <script src="js/BloomingFLower2.js"></script>
+    <!-- <script src="js/BloomingFLower.js"></script> -->
     <script src="js/BloodBottle.js"></script>
     <script src="js/ForestBackground.js"></script>
     <script src="js/Prologue.js"></script>
