--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -19,7 +19,6 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=g4f5TY0T"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
     <script src="js/Statue.js"></script>
@@ -28,7 +27,7 @@
     <script src="js/Eclipse.js"></script>
     <script src="js/Eye.js"></script>
     <script src="js/HummingBird.js"></script>
-    <script src="js/BloomingFLower2.js"></script>
+    <script src="js/FlowerBloom.js"></script>
     <!-- <script src="js/BloomingFLower.js"></script> -->
     <script src="js/BloodBottle.js"></script>
     <script src="js/ForestBackground.js"></script>
