--- a/exercises/bubble-popper-new/index.html
+++ b/exercises/bubble-popper-new/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      width="device-width,"
-      initial-scale="1.0,"
-      maximum-scale="1.0,"
-      user-scalable="0"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
     <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
 
@@ -18,7 +12,6 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
@@ -27,4 +20,5 @@
   <body>
     <!-- HTML would go here if needed. -->
   </body>
+
 </html>
