--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -22,6 +22,7 @@
     <script src="js/libraries/annyang.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Lightning.js"></script>
     <script src="js/Statue.js"></script>
     <script src="js/RedSpark.js"></script>
     <script src="js/BlueBird.js"></script>
