--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -19,7 +19,7 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=g4f5TY0T"></script>
-    <script src="js/libraries/annyang.min.js"></script>
+    <!-- <script src="js/libraries/annyang.min.js"></script> -->
 
     <!-- My script(s) -->
     <script src="js/Lightning.js"></script>
