P1: renamed varibales properly

--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -24,14 +24,13 @@
     <!-- My script(s) -->
     <script src="js/Voice.js"></script>
     <script src="js/Lightning.js"></script>
-    <script src="js/Statue.js"></script>
+    <script src="js/Encounter.js"></script>
     <script src="js/RedSpark.js"></script>
     <script src="js/BlueBird.js"></script>
     <script src="js/Eclipse.js"></script>
     <script src="js/Eye.js"></script>
-    <script src="js/HummingBird.js"></script>
+    <script src="js/Dragonfly.js"></script>
     <script src="js/FlowerBloom.js"></script>
-    <!-- <script src="js/BloomingFLower.js"></script> -->
     <script src="js/BloodBottle.js"></script>
     <script src="js/ForestBackground.js"></script>
     <script src="js/Prologue.js"></script>
