P1: renamed variables properly

--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -26,7 +26,7 @@
     <script src="js/Lightning.js"></script>
     <script src="js/Encounter.js"></script>
     <script src="js/RedSpark.js"></script>
-    <script src="js/BlueBird.js"></script>
+    <script src="js/RedBird.js"></script>
     <script src="js/Eclipse.js"></script>
     <script src="js/Eye.js"></script>
     <script src="js/Dragonfly.js"></script>
