--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -18,8 +18,9 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
+
+    <!-- Responsive Voice -->
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=g4f5TY0T"></script>
-    <!-- <script src="js/libraries/annyang.min.js"></script> -->
 
     <!-- My script(s) -->
     <script src="js/Voice.js"></script>
@@ -31,7 +32,7 @@
     <script src="js/Dragonfly.js"></script>
     <script src="js/FlowerBloom.js"></script>
     <script src="js/BloodBottle.js"></script>
-    <script src="js/ForestBackground.js"></script>
+    <script src="js/Background.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
     <script src="js/script.js"></script>
