--- a/projects/project1-test2/index.html
+++ b/projects/project1-test2/index.html
@@ -10,7 +10,7 @@
       user-scalable="0"
     />
 
-    <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
+    <title>Project 1 - Lestat de Lioncourt</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
