--- a/projects/project1-official/index.html
+++ b/projects/project1-official/index.html
@@ -10,7 +10,7 @@
       user-scalable="0"
     />
 
-    <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
+    <title>Project 1 - Lestat de Lioncourt</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -18,22 +18,21 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
+
+    <!-- Responsive Voice -->
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=g4f5TY0T"></script>
-    <!-- <script src="js/libraries/annyang.min.js"></script> -->
 
     <!-- My script(s) -->
     <script src="js/Voice.js"></script>
     <script src="js/Lightning.js"></script>
-    <script src="js/Statue.js"></script>
-    <script src="js/RedSpark.js"></script>
-    <script src="js/BlueBird.js"></script>
+    <script src="js/Encounter.js"></script>
+    <script src="js/RedBird.js"></script>
     <script src="js/Eclipse.js"></script>
     <script src="js/Eye.js"></script>
-    <script src="js/HummingBird.js"></script>
+    <script src="js/Dragonfly.js"></script>
     <script src="js/FlowerBloom.js"></script>
-    <!-- <script src="js/BloomingFLower.js"></script> -->
     <script src="js/BloodBottle.js"></script>
-    <script src="js/ForestBackground.js"></script>
+    <script src="js/Background.js"></script>
     <script src="js/Prologue.js"></script>
     <script src="js/Title.js"></script>
     <script src="js/script.js"></script>
