--- a/experiments/change-into-symbol/index.html
+++ b/experiments/change-into-symbol/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Orbitron"
+    />
     <meta
       name="viewport"
       width="device-width,"
       initial-scale="1.0,"
       maximum-scale="1.0,"
       user-scalable="0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Redressed"
     />
 
     <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
@@ -19,23 +27,7 @@
   </head>
 
   <body>
-    <section id="main-text">
-      <p id="p1">
-        One impulse art thou conscious of, at best; O, never seek to know the
-        other! Two souls, alas! reside within my breast, And each withdraws
-        from, and repels, its brother.
-      </p>
-      <p id="p2">
-        As from the God she flew with furious pace, Or as the God more furious
-        urged the chase. Now fainting, sinking, pale, the nymph appears; Now
-        close behind, his sounding steps she hears;
-      </p>
-      <p id="p3">
-        And now his shadow reached her as she run, His shadow lengthened by the
-        setting sun; And now his shorter breath, with sultry air, Pants on her
-        neck, and fans her parting hair.’
-      </p>
-    </section>
+    <section id="main-text"></section>
     <!-- HTML would go here if needed. -->
 
     <!-- My script(s) -->
