E5: added a content: symbols, text, font

--- a/exercises/haiku-generator-new/index.html
+++ b/exercises/haiku-generator-new/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      width="device-width,"
+      initial-scale="1.0,"
+      maximum-scale="1.0,"
+      user-scalable="0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Orbitron"
+    />
 
-    <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
+    <title>Ex5 - Haiku Generator</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -18,5 +28,4 @@
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
-
 </html>
