E5: added an id for the section element

--- a/exercises/haiku-generator-new/index.html
+++ b/exercises/haiku-generator-new/index.html
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+    <section id="main-text"></section>
     <!-- HTML would go here if needed. -->
 
     <!-- My script(s) -->
