A6: finshed a reduct activity

--- a/activities/06-raving-redactionist/index.html
+++ b/activities/06-raving-redactionist/index.html
@@ -25,6 +25,44 @@
 
   <body>
     <!-- HTML would go here if needed. -->
+    <section id="secret-document">
+      <h2>TOP SECRET!!!</h2>
+      <p>
+        Lorem ipsum dolor sit amet,
+        <span class="top-secret redacted">consectetur adipiscing elit.</span>
+        Morbi vitae est facilisis, sodales justo et, condimentum libero.
+        <span class="top-secret redacted"
+          >Pellentesque a tellus eget ante lacinia</span
+        >
+        rhoncus sit <span class="top-secret redacted">amet nec metus</span>.
+        Interdum et malesuada fames ac ante ipsum primis
+        <span class="top-secret redacted">in faucibus</span>.
+      </p>
+      <p>
+        <span class="top-secret redacted"
+          >Etiam aliquet ut tortor et ultricies</span
+        >. Suspendisse potenti. Suspendisse blandit purus eu quam lacinia
+        dictum. Fusce porta imperdiet pellentesque. Vestibulum convallis nec mi
+        vel vehicula.
+        <span class="top-secret redacted"
+          >Vivamus iaculis purus at cursus tempus</span
+        >. Aenean sit amet lorem nec elit mattis sagittis non ornare arcu. Nam
+        imperdiet risus augue, vitae auctor mi rhoncus nec. Mauris eget pulvinar
+        arcu.
+      </p>
+      <p>
+        Nulla sodales vitae odio at ultrices. Suspendisse potenti. Sed congue
+        fringilla sem, in posuere arcu interdum sed.
+        <span class="top-secret redacted"
+          >Etiam facilisis lectus eget dolor maximus scelerisque</span
+        >. Sed pretium consectetur bibendum. Etiam cursus lacus nisl, vel mattis
+        sapien aliquam sodales. Integer eget libero dolor.
+        <span class="top-secret redacted"
+          >Integer nec pharetra sapien, eget efficitur mauris.</span
+        >
+        Integer lobortis egestas blandit.
+      </p>
+    </section>
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
