--- a/experiments/jquery-ui-interactions/index.html
+++ b/experiments/jquery-ui-interactions/index.html
@@ -31,7 +31,16 @@
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+    <div id="prison">
+      <span id="escape-tunnel">Tunnel</span>
+      <span id="prisoner">The prisoner</span>
+    </div>
+
+    <div id="introduction-dialog" title="WELCOM">
+      <p>
+        How are u gonna to escape?
+      </p>
+    </div>
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
