A7: added breaks between the lines and spans

--- a/activities/07-code-taker/index.html
+++ b/activities/07-code-taker/index.html
@@ -1,22 +1,61 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      width="device-width,"
+      initial-scale="1.0,"
+      maximum-scale="1.0,"
+      user-scalable="0"
+    />
 
     <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css"
+    href=https://code.jquery.com/ui/1.12.1/themes/black-tie/jquery-ui.css />
 
     <!-- Library script(s) go here -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
+      integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY="
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+    <section id="poem">
+      <h2><span class="secret">D</span>emain, dès l'aube</h2>
+      <p>
+        Demain, dès l’aube, à l’heure <span class="secret">o</span>ù blanchit la
+        campagne, <br />
+        Je partirai. Vois-tu, je sais que tu m’attends.
+      </p>
 
+      <p>
+        J’irai par la forêt, j’irai par la montagne. <br />
+        Je ne puis demeurer
+        <span class="secret">l</span>oin de toi plus longtemps.
+      </p>
+      <p>
+        Je marcherai les yeux fixés sur mes pensées,<br />
+        Sans rien voir au deh<span class="secret">o</span>rs, sans entendre
+        aucun bruit,<br />
+        Seul, inconnu, le dos courbé, les mains c<span class="secret">r</span
+        >oisées, <br />
+        Triste, et le jour pour moi sera comme la nuit.
+      </p>
+    </section>
+
+    <section id="answer"></section>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
-
 </html>
