crateed a sandbox file and phaser setup file

--- a/activities/07-code-taker/index.html
+++ b/activities/07-code-taker/index.html
@@ -32,11 +32,12 @@
 
   <body>
     <section id="poem">
-      <h2><span class="secret">D</span>emain, dès l'aube</h2>
+      <h2>Demain, dès l'aube</h2>
       <p>
-        Demain, dès l’aube, à l’heure <span class="secret">o</span>ù blanchit la
-        campagne, <br />
-        Je partirai. Vois-tu, je sais que tu m’attends.
+        <span class="secret">D</span>emain, dès l’aube, à l’heure
+        <span class="secret">o</span>ù blanchit la campagne, <br />
+        Je partirai. Vois-tu, je sais que t<span class="secret">u</span>
+        m’attends.
       </p>
 
       <p>
@@ -46,15 +47,20 @@
       </p>
       <p>
         Je marcherai les yeux fixés sur mes pensées,<br />
-        Sans rien voir au deh<span class="secret">o</span>rs, sans entendre
+        Sans rien voir au dehors, sans <span class="secret">e</span>ntendre
         aucun bruit,<br />
-        Seul, inconnu, le dos courbé, les mains c<span class="secret">r</span
-        >oisées, <br />
+        Se<span class="secret">u</span>l, inconnu, le dos courbé, les mains
+        c<span class="secret">r</span>oisées, <br />
         Triste, et le jour pour moi sera comme la nuit.
       </p>
     </section>
 
     <section id="answer"></section>
+    <div id="solved-dialog" title="Quoi?">
+      <p>
+        La douleur vous avez manqué ?
+      </p>
+    </div>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
