--- a/experiments/jquery-ui-interactions/index.html
+++ b/experiments/jquery-ui-interactions/index.html
@@ -41,7 +41,7 @@
         How are u gonna to escape?
       </p>
     </div>
-
+    <img id="rose" src="assets/images/rose.jpg" />
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
