--- a/projects/project2-prototype/index.html
+++ b/projects/project2-prototype/index.html
@@ -14,13 +14,29 @@
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://code.jquery.com/ui/1.12.1/themes/trontastic/jquery-ui.css"
+    />
 
     <!-- Library script(s) go here -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
+      integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY="
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <!-- HTML would go here if needed. -->
-
+    <p>Hello</p>
+    <button id="sample1-button">Sample</button>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
