P2: added a basic launch pad structure

--- a/projects/project2-prototype/index.html
+++ b/projects/project2-prototype/index.html
@@ -34,10 +34,20 @@
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
-    <p>Hello</p>
-    <button id="sample1-button">Sample</button>
-    <!-- My script(s) -->
+    <div class="container">
+      <div id="launch-pad">
+        <div id="pad-container">
+          <div class="drum-pad" id="Q"></div>
+          <div class="drum-pad" id="W"></div>
+          <div class="drum-pad" id="E"></div>
+          <div class="drum-pad" id="A"></div>
+          <div class="drum-pad" id="S"></div>
+          <div class="drum-pad" id="D"></div>
+          <div class="drum-pad drum-pad-hover" id="X"></div>
+          <div class="drum-pad drum-pad-clicked" id="C"></div>
+        </div>
+      </div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
