--- a/projects/project2-prototype/index.html
+++ b/projects/project2-prototype/index.html
@@ -43,6 +43,11 @@
           <div class="drum-pad" id="A"></div>
           <div class="drum-pad" id="S"></div>
           <div class="drum-pad" id="D"></div>
+          <div class="drum-pad" id="F"></div>
+          <div class="drum-pad" id="G"></div>
+          <div class="drum-pad" id="H"></div>
+          <div class="drum-pad" id="J"></div>
+          <div class="drum-pad" id="K"></div>
           <div class="drum-pad drum-pad-hover" id="X"></div>
           <div class="drum-pad drum-pad-clicked" id="C"></div>
         </div>
