P2: separated sounds between the two crystals

--- a/projects/project2-prototype2/index.html
+++ b/projects/project2-prototype2/index.html
@@ -21,13 +21,15 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
+      integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY="
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-    <p>Hello There</p>
     <div id="mixer-box"></div>
-
-    <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
 </html>
