--- a/sandbox/project2-prototype - Pizzicato/index.html
+++ b/sandbox/project2-prototype - Pizzicato/index.html
@@ -40,8 +40,8 @@
   </head>
 
   <body>
-    <div class="container">
-      <!-- <div id="launch-pad">
+    <!-- <div class="container"> -->
+    <!-- <div id="launch-pad">
         <div id="pad-container">
           <div class="drum-pad" id="Q"></div>
           <div class="drum-pad" id="W"></div>
@@ -55,7 +55,7 @@
           <button class="drum-button">Music</button>
         </div>
       </div> -->
-    </div>
+    <!-- </div> -->
     <script src="js/script.js"></script>
   </body>
 </html>
