P2: added a branch and some animation effetcs

--- a/projects/project2-prototype2/index.html
+++ b/projects/project2-prototype2/index.html
@@ -30,6 +30,7 @@
 
   <body>
     <div id="mixer-box"></div>
+    <p id="drop-text"></p>
     <script src="js/script.js"></script>
   </body>
 </html>
