--- a/projects/project2-prototype2/index.html
+++ b/projects/project2-prototype2/index.html
@@ -10,7 +10,7 @@
       user-scalable="0"
     />
 
-    <title>Project 2 prototype</title>
+    <title>Project 2 - rough prototype</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
