P2: added a basic css layout

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -30,17 +30,18 @@
 
   <body>
     <!-- HTML would go here if needed. -->
-    <p id="text1">HELLO</p>
-    <p id="text2">HELLO 2</p>
-    <p id="text3">HELLO 3</p>
-    <p id="text4">HELLO 4</p>
-    <p id="text5">HELLO 5</p>
-    <p id="text6">HELLO 6</p>
-    <p id="text7">HELLO 7</p>
-    <p id="text8">HELLO 8</p>
-    <p id="text9">𓇼</p>
-    <!-- <img id="moth-icon" src="assets/images/mothwhite.png" /> -->
-
+    <div id="container">
+      <p class="texts" id="text1">HELLO</p>
+      <p class="texts" id="text2">HELLO 2</p>
+      <p class="texts" id="text3">HELLO 3</p>
+      <p class="texts" id="text4">HELLO 4</p>
+      <p class="texts" id="text5">HELLO 5</p>
+      <p class="texts" id="text6">HELLO 6</p>
+      <p class="texts" id="text7">HELLO 7</p>
+      <p class="texts" id="text8">HELLO 8</p>
+      <p class="texts" id="text9">𓇼</p>
+      <!-- <img id="moth-icon" src="assets/images/mothwhite.png" /> -->
+    </div>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </body>
