P2: add a  icon postioning but having issues with mouse click

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -31,15 +31,19 @@
   <body>
     <!-- HTML would go here if needed. -->
     <div id="container">
-      <p class="texts" id="text1">HELLO</p>
-      <p class="texts" id="text2">HELLO 2</p>
-      <p class="texts" id="text3">HELLO 3</p>
-      <p class="texts" id="text4">HELLO 4</p>
-      <p class="texts" id="text5">HELLO 5</p>
-      <p class="texts" id="text6">HELLO 6</p>
-      <p class="texts" id="text7">HELLO 7</p>
-      <p class="texts" id="text8">HELLO 8</p>
-      <p class="texts" id="text9">𓇼</p>
+      <p class="texts" id="text1">✣</p>
+      <p class="texts" id="text2">✦</p>
+      <p class="texts" id="text3">✣</p>
+      <p class="texts" id="text4">✣</p>
+      <p class="texts" id="text5">✣</p>
+      <p class="texts" id="text6">✣</p>
+      <p class="texts" id="text7">✣</p>
+      <p class="texts" id="text8">✣</p>
+      <p class="texts" id="text9">HELLO</p>
+
+      <p class="texts" id="text9">✣</p>
+      <p class="texts" id="text9">✣</p>
+      <p class="texts" id="text9">✣</p>
       <!-- <img id="moth-icon" src="assets/images/mothwhite.png" /> -->
     </div>
     <!-- My script(s) -->
