P2: added an icon container

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -31,20 +31,22 @@
   <body>
     <!-- HTML would go here if needed. -->
     <div id="container">
-      <p class="texts" id="text1">✣</p>
-      <p class="texts" id="text2">✦</p>
-      <p class="texts" id="text3">✣</p>
-      <p class="texts" id="text4">✣</p>
-      <p class="texts" id="text5">✣</p>
-      <p class="texts" id="text6">✣</p>
-      <p class="texts" id="text7">✣</p>
-      <p class="texts" id="text8">✣</p>
-      <p class="texts" id="text9">HELLO</p>
+      <div id="click-icons-container">
+        <p class="texts" id="text1">✣</p>
+        <p class="texts" id="text2">✦</p>
+        <p class="texts" id="text3">✣</p>
+        <p class="texts" id="text4">✣</p>
+        <p class="texts" id="text5">✣</p>
+        <p class="texts" id="text6">✣</p>
+        <p class="texts" id="text7">✣</p>
+        <p class="texts" id="text8">✣</p>
+        <p class="texts" id="text9">✣</p>
 
-      <p class="texts" id="text9">✣</p>
-      <p class="texts" id="text9">✣</p>
-      <p class="texts" id="text9">✣</p>
-      <!-- <img id="moth-icon" src="assets/images/mothwhite.png" /> -->
+        <p class="texts" id="text9">✣</p>
+        <p class="texts" id="text9">✣</p>
+        <p class="texts" id="text9">✣</p>
+        <!-- <img id="moth-icon" src="assets/images/mothwhite.png" /> -->
+      </div>
     </div>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
