--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -32,19 +32,19 @@
     <!-- HTML would go here if needed. -->
     <div id="container">
       <div id="click-icons-container">
-        <p class="texts" id="text1">✣</p>
-        <p class="texts" id="text2">✦</p>
-        <p class="texts" id="text3">✣</p>
-        <p class="texts" id="text4">✣</p>
-        <p class="texts" id="text5">✣</p>
-        <p class="texts" id="text6">✣</p>
-        <p class="texts" id="text7">✣</p>
-        <p class="texts" id="text8">✣</p>
-        <p class="texts" id="text9">✣</p>
+        <p class="icons" id="icon1">✣</p>
+        <p class="icons" id="icon2">✦</p>
+        <p class="icons" id="icon3">✣</p>
+        <p class="icons" id="icon4">✣</p>
+        <p class="icons" id="icon5">✣</p>
+        <p class="icons" id="icon6">✣</p>
+        <p class="icons" id="icon7">✣</p>
+        <p class="icons" id="icon8">✣</p>
+        <p class="icons" id="icon9">✣</p>
 
-        <p class="texts" id="text9">✣</p>
-        <p class="texts" id="text9">✣</p>
-        <p class="texts" id="text9">✣</p>
+        <p class="icons" id="icon10">✣</p>
+        <p class="icons" id="icon11">✣</p>
+        <p class="icons" id="icon12">✣</p>
         <!-- <img id="moth-icon" src="assets/images/mothwhite.png" /> -->
       </div>
     </div>
