P2: added an image container to solve its conflict with icons

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -30,7 +30,7 @@
 
   <body>
     <!-- HTML would go here if needed. -->
-    <div id="container">
+    <div id="wrapper">
       <div id="click-icons-container">
         <p class="icons" id="icon1">✣</p>
         <p class="icons" id="icon2">✦</p>
@@ -45,6 +45,7 @@
         <p class="icons" id="icon11">✣</p>
         <p class="icons" id="icon12">✣</p>
       </div>
+      <div id="image-container"></div>
     </div>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
