--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -10,7 +10,7 @@
       user-scalable="0"
     />
 
-    <title>CHANGE THIS TITLE IN INDEX.HTML!</title>
+    <title>𓇼 Project 2</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -31,6 +31,7 @@
   <body>
     <!-- HTML would go here if needed. -->
     <div id="wrapper">
+      <div id="image-container"></div>
       <div id="click-icons-container">
         <p class="icons" id="icon1">✣</p>
         <p class="icons" id="icon2">✦</p>
@@ -44,8 +45,8 @@
         <p class="icons" id="icon10">✣</p>
         <p class="icons" id="icon11">✣</p>
         <p class="icons" id="icon12">✣</p>
+        <!-- <p class="icons" id="icon13">✣</p> -->
       </div>
-      <div id="image-container"></div>
     </div>
     <!-- My script(s) -->
     <script src="js/script.js"></script>
