--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -31,20 +31,36 @@
   <body>
     <!-- HTML would go here if needed. -->
     <div id="wrapper">
-      <div id="image-container"></div>
+      <div id="image-container">
+        `<img class="images" id="tree" src="assets/images/tree-cut.png" />`
+        `<img
+          class="images"
+          id="mothEye"
+          src="assets/images/moth-face.png"/>`
+         `<img class="images" id="fire" src="assets/images/fire5.png" />`
+         `<img class="images"id="walker"src="assets/images/rope-walker-shadow2.png">`;
+         `<img class="images"id="sun"src="assets/images/sun2.png">`;
+         `<img class="images"id="swingFigure"src="assets/images/swing1.png">`;
+         `<img class="images"id="skyBg"src="assets/images/skybg3.png">`;
+         `<img class="images"id="darkPlanet"src="assets/images/darkplanet.png">`;
+         `<img class="images"id="smoke"src="assets/images/smoke.png">`;
+         `<img class="images"id="whiteMoth"src="assets/images/mothwhite.png">`;
+         `<img class="images"id="crystal"src="assets/images/ghost.png">`;
+
+      </div>
       <div id="click-icons-container">
-        <p class="icons" id="icon1">✣</p>
-        <p class="icons" id="icon2">✦</p>
-        <p class="icons" id="icon3">✣</p>
-        <p class="icons" id="icon4">✣</p>
-        <p class="icons" id="icon5">✣</p>
-        <p class="icons" id="icon6">✣</p>
-        <p class="icons" id="icon7">✣</p>
-        <p class="icons" id="icon8">✣</p>
-        <p class="icons" id="icon9">✣</p>
-        <p class="icons" id="icon10">✣</p>
-        <p class="icons" id="icon11">✣</p>
-        <p class="icons" id="icon12">✣</p>
+        <p class="icons" image="#tree" id="icon1">✣</p>
+        <p class="icons" image="#mothEye" id="icon2">✦</p>
+        <p class="icons" image="#fire" id="icon3">✣</p>
+        <p class="icons" image="#walker"id="icon4">✣</p>
+        <p class="icons" image="#wingedMan"id="icon5">✣</p>
+        <p class="icons" image="#sun"id="icon6">✣</p>
+        <p class="icons" image="#swingFigure"id="icon7">✣</p>
+        <p class="icons" image="#skyBg"id="icon8">✣</p>
+        <p class="icons" image="#darkPlanet"id="icon9">✣</p>
+        <p class="icons" image="#smole"id="icon10">✹</p>
+        <p class="icons" image="#whiteMoth"id="icon11">✹</p>
+        <p class="icons" image="#crystal"id="icon12">✹</p>
         <!-- <p class="icons" id="icon13">✣</p> -->
       </div>
     </div>
