P2: changed the image display functionality with mouseover

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -38,7 +38,11 @@
           class="images"
           id="walker"
           src="assets/images/rope-walker-shadow2.png"
-        />`; `<img class="images" id="sun" src="assets/images/sun2.png" />`;
+        />`; `<img
+          class="images"
+          id="wingedMan"
+          src="assets/images/wingmanC.png"
+        />` `<img class="images" id="sun" src="assets/images/sun2.png" />`;
         `<img
           class="images"
           id="swingFigure"
