P2: testing sound samples on icons

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -73,7 +73,7 @@
         <p class="icons" image="#swingFigure" id="icon7">✣</p>
         <p class="icons" image="#skyBg" id="icon8">✣</p>
         <p class="icons" image="#darkPlanet" id="icon9">✣</p>
-        <p class="icons" image="#smole" id="icon10">✹</p>
+        <p class="icons" image="#smoke" id="icon10">✹</p>
         <p class="icons" image="#whiteMoth" id="icon11">✹</p>
         <p class="icons" image="#crystal" id="icon12">✹</p>
         <!-- <p class="icons" id="icon13">✣</p> -->
