P2: working on disabling the automation effect

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -32,36 +32,27 @@
     <!-- HTML would go here if needed. -->
     <div id="wrapper">
       <div id="image-container">
-        `<img class="images" id="tree" src="assets/images/tree-cut.png" />`
-        `<img class="images" id="mothEye" src="assets/images/moth-face.png" />`
-        `<img class="images" id="fire" src="assets/images/fire5.png" />` `<img
+        <img class="images" id="tree" src="assets/images/tree-cut.png" />
+        <img class="images" id="mothEye" src="assets/images/moth-face.png" />
+        <img class="images" id="fire" src="assets/images/fire5.png" /><img
           class="images"
           id="walker"
           src="assets/images/rope-walker-shadow2.png"
-        />`; `<img
-          class="images"
-          id="wingedMan"
-          src="assets/images/wingmanC.png"
-        />` `<img class="images" id="sun" src="assets/images/sun2.png" />`;
-        `<img
+        /><img class="images" id="wingedMan" src="assets/images/wingmanC.png" />
+        <img class="images" id="sun" src="assets/images/sun2.png" />
+        <img
           class="images"
           id="swingFigure"
           src="assets/images/swing1.png"
-        />`; `<img class="images" id="skyBg" src="assets/images/skybg3.png" />`;
-        `<img
+        /><img class="images" id="skyBg" src="assets/images/skybg3.png" />
+        <img
           class="images"
           id="darkPlanet"
           src="assets/images/darkplanet.png"
-        />`; `<img class="images" id="smoke" src="assets/images/smoke.png" />`;
-        `<img
-          class="images"
-          id="whiteMoth"
-          src="assets/images/mothwhite.png"
-        />`; `<img
-          class="images"
-          id="crystal"
-          src="assets/images/ghost.png"
-        />`;
+        />
+        <img class="images" id="smoke" src="assets/images/smoke.png" />
+        <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
+        <img class="images" id="crystal" src="assets/images/ghost.png" />
       </div>
       <div id="click-icons-container">
         <p class="icons" image="#tree" id="icon1">✣</p>
