P2: fixed the issue with media interval and disabling it

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -34,7 +34,8 @@
       <div id="image-container">
         <img class="images" id="tree" src="assets/images/tree-cut.png" />
         <img class="images" id="mothEye" src="assets/images/moth-face.png" />
-        <img class="images" id="fire" src="assets/images/fire5.png" /><img
+        <img class="images" id="fire" src="assets/images/fire5.png" />
+        <!-- <img
           class="images"
           id="walker"
           src="assets/images/rope-walker-shadow2.png"
@@ -52,7 +53,7 @@
         />
         <img class="images" id="smoke" src="assets/images/smoke.png" />
         <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
-        <img class="images" id="crystal" src="assets/images/ghost.png" />
+        <img class="images" id="crystal" src="assets/images/ghost.png" /> -->
       </div>
       <div id="click-icons-container">
         <p class="icons" image="#tree" id="icon1">✣</p>
