P2: rearranged images randomized positions

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -35,7 +35,7 @@
         <img class="images" id="tree" src="assets/images/tree-cut.png" />
         <img class="images" id="mothEye" src="assets/images/moth-face.png" />
         <img class="images" id="fire" src="assets/images/fire5.png" />
-        <!-- <img
+        <img
           class="images"
           id="walker"
           src="assets/images/rope-walker-shadow2.png"
@@ -53,12 +53,12 @@
         />
         <img class="images" id="smoke" src="assets/images/smoke.png" />
         <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
-        <img class="images" id="crystal" src="assets/images/ghost.png" /> -->
+        <img class="images" id="crystal" src="assets/images/ghost.png" />
       </div>
       <div id="click-icons-container">
         <p class="icons" image="#tree" id="icon1">✣</p>
-        <p class="icons" image="#mothEye" id="icon2">✦</p>
-        <p class="icons" image="#fire" id="icon3">✣</p>
+        <p class="icons mover" image="#mothEye" id="icon2">✦</p>
+        <p class="icons mover" image="#whiteMoth" id="icon3">✣</p>
         <p class="icons" image="#walker" id="icon4">✣</p>
         <p class="icons" image="#wingedMan" id="icon5">✣</p>
         <p class="icons" image="#sun" id="icon6">✣</p>
@@ -66,8 +66,8 @@
         <p class="icons" image="#skyBg" id="icon8">✣</p>
         <p class="icons" image="#darkPlanet" id="icon9">✣</p>
         <p class="icons" image="#smoke" id="icon10">✹</p>
-        <p class="icons" image="#whiteMoth" id="icon11">✹</p>
-        <p class="icons" image="#crystal" id="icon12">✹</p>
+        <p class="icons" image="#crystal" id="icon11">✹</p>
+        <p class="icons" image="#fire" id="icon12">✹</p>
         <!-- <p class="icons" id="icon13">✣</p> -->
       </div>
     </div>
