P2: removed the text and one icon

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -53,7 +53,7 @@
           id="darkPlanet"
           src="assets/images/darkplanet.png"
         />
-        <img class="images" id="smoke" src="assets/images/city2.png" />
+        <img class="images" id="city" src="assets/images/city2.png" />
         <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
         <img class="images" id="ghost" src="assets/images/ghost.png" />
       </div>
@@ -65,15 +65,11 @@
         <p class="icons" image="#wingedMan" id="icon5">✣</p>
         <p class="icons mover" image="#sun" id="icon6">✣</p>
         <p class="icons" image="#swingFigure" id="icon7">✣</p>
-        <p class="icons" image="#darkPlanet" id="icon9">✣</p>
-        <p class="icons" image="#skyBg" id="icon8">✣</p>
-        <p class="icons" image="#fire" id="icon10">✹</p>
-        <p class="icons" image="#smoke" id="icon12">✹</p>
+        <!-- <p class="icons" image="#skyBg" id="icon8">✣</p> -->
+        <p class="icons" image="#darkPlanet" id="icon8">✣</p>
+        <p class="icons" image="#fire" id="icon9">✹</p>
+        <p class="icons" image="#city" id="icon10">✹</p>
         <p class="icons" image="#ghost" id="icon11">✹</p>
-        <!-- <p class="icons" id="icon13">✣</p> -->
-      </div>
-      <div id="text">
-        <p id="quote"></p>
       </div>
     </div>
     <!-- My script(s) -->
