P2: rearranged the images in css, removed unused code

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -10,25 +10,15 @@
       user-scalable="0"
     />
 
-    <title>𓇼 Project 2</title>
+    <title>𓇼Into the Blue𓇼</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link
-      <link
-      href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap"
-      rel="stylesheet"
-    />
 
     <!-- Library script(s) go here -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
-      integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY="
       crossorigin="anonymous"
     ></script>
   </head>
@@ -38,8 +28,12 @@
     <div id="wrapper">
       <div id="image-container">
         <img class="images" id="tree" src="assets/images/tree-cut.png" />
-        <img class="images" id="mothEye" src="assets/images/moth-face.png" />
-        <img class="images" id="fire" src="assets/images/smoke.png" />
+        <img
+          class="images"
+          id="mothEye"
+          src="assets/images/ghostInverted.png"
+        />
+        <img class="images" id="smoke" src="assets/images/smoke.png" />
         <img
           class="images"
           id="walker"
@@ -59,15 +53,14 @@
       </div>
       <div id="click-icons-container">
         <p class="icons" image="#tree" id="icon1">✣</p>
-        <p class="icons mover" image="#mothEye" id="icon2">✦</p>
-        <p class="icons mover" image="#whiteMoth" id="icon3">✣</p>
+        <p class="icons mover" image="#whiteMoth" id="icon2">✦</p>
+        <p class="icons" image="#mothEye" id="icon3">✣</p>
         <p class="icons" image="#walker" id="icon4">✣</p>
         <p class="icons" image="#wingedMan" id="icon5">✣</p>
         <p class="icons mover" image="#sun" id="icon6">✣</p>
         <p class="icons" image="#swingFigure" id="icon7">✣</p>
-        <!-- <p class="icons" image="#skyBg" id="icon8">✣</p> -->
-        <p class="icons" image="#darkPlanet" id="icon8">✣</p>
-        <p class="icons" image="#fire" id="icon9">✹</p>
+        <p class="icons mover" image="#darkPlanet" id="icon8">✣</p>
+        <p class="icons mover" image="#smoke" id="icon9">✹</p>
         <p class="icons" image="#city" id="icon10">✹</p>
         <p class="icons" image="#ghost" id="icon11">✹</p>
       </div>
