P2: changed and added new sounds

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -30,7 +30,7 @@
         <img class="images" id="tree" src="assets/images/tree-cut.png" />
         <img
           class="images"
-          id="mothEye"
+          id="ghostInverted"
           src="assets/images/ghostInverted.png"
         />
         <img class="images" id="smoke" src="assets/images/smoke.png" />
@@ -53,16 +53,16 @@
       </div>
       <div id="click-icons-container">
         <p class="icons" image="#tree" id="icon1">✣</p>
-        <p class="icons mover" image="#whiteMoth" id="icon2">✦</p>
-        <p class="icons" image="#mothEye" id="icon3">✣</p>
+        <p class="icons mover" image="#whiteMoth" id="icon2">✣</p>
+        <p class="icons" image="#ghostInverted" id="icon3">✣</p>
         <p class="icons" image="#walker" id="icon4">✣</p>
         <p class="icons" image="#wingedMan" id="icon5">✣</p>
         <p class="icons mover" image="#sun" id="icon6">✣</p>
         <p class="icons" image="#swingFigure" id="icon7">✣</p>
         <p class="icons mover" image="#darkPlanet" id="icon8">✣</p>
-        <p class="icons mover" image="#smoke" id="icon9">✹</p>
-        <p class="icons" image="#city" id="icon10">✹</p>
-        <p class="icons" image="#ghost" id="icon11">✹</p>
+        <p class="icons mover" image="#smoke" id="icon9">✣</p>
+        <p class="icons" image="#city" id="icon10">✣</p>
+        <p class="icons" image="#ghost" id="icon11">✣</p>
       </div>
     </div>
     <!-- My script(s) -->
