--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -1,71 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      width="device-width,"
-      initial-scale="1.0,"
-      maximum-scale="1.0,"
-      user-scalable="0"
-    />
 
-    <title>𓇼Into the Blue𓇼</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" width="device-width," initial-scale="1.0," maximum-scale="1.0," user-scalable="0" />
 
-    <!-- CSS stylesheet(s) -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <title>𓇼Into the Blue𓇼</title>
 
-    <!-- Library script(s) go here -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <!-- CSS stylesheet(s) -->
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <body>
-    <!-- HTML would go here if needed. -->
-    <div id="wrapper">
-      <div id="image-container">
-        <img class="images" id="tree" src="assets/images/tree-cut.png" />
-        <img
-          class="images"
-          id="ghostInverted"
-          src="assets/images/ghostInverted.png"
-        />
-        <img class="images" id="smoke" src="assets/images/smoke.png" />
-        <img
-          class="images"
-          id="walker"
-          src="assets/images/rope-walker-shadow2.png"
-        /><img class="images" id="wingedMan" src="assets/images/wingmanC.png" />
-        <img class="images" id="sun" src="assets/images/sun2.png" />
-        <img class="images" id="swingFigure" src="assets/images/swing1.png" />
-        <!-- <img class="images" id="skyBg" src="assets/images/skybg3.png" /> -->
-        <img
-          class="images"
-          id="darkPlanet"
-          src="assets/images/darkplanet.png"
-        />
-        <img class="images" id="city" src="assets/images/city2.png" />
-        <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
-        <img class="images" id="ghost" src="assets/images/ghost.png" />
-      </div>
-      <div id="click-icons-container">
-        <p class="icons" image="#tree" id="icon1">✣</p>
-        <p class="icons mover" image="#whiteMoth" id="icon2">✣</p>
-        <p class="icons" image="#ghostInverted" id="icon3">✣</p>
-        <p class="icons" image="#walker" id="icon4">✣</p>
-        <p class="icons" image="#wingedMan" id="icon5">✣</p>
-        <p class="icons mover" image="#sun" id="icon6">✣</p>
-        <p class="icons" image="#swingFigure" id="icon7">✣</p>
-        <p class="icons mover" image="#darkPlanet" id="icon8">✣</p>
-        <p class="icons mover" image="#smoke" id="icon9">✣</p>
-        <p class="icons" image="#city" id="icon10">✣</p>
-        <p class="icons" image="#ghost" id="icon11">✣</p>
-      </div>
+  <!-- Library scripts -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <!-- HTML  -->
+  <div id="wrapper">
+    <div id="image-container">
+      <img class="images" id="tree" src="assets/images/tree-cut.png" />
+      <img class="images" id="ghostInverted" src="assets/images/ghostInverted.png" />
+      <img class="images" id="smoke" src="assets/images/smoke.png" />
+      <img class="images" id="walker" src="assets/images/rope-walker-shadow2.png" />
+      <img class="images" id="wingedMan" src="assets/images/wingmanC.png" />
+      <img class="images" id="sun" src="assets/images/sun2.png" />
+      <img class="images" id="swingFigure" src="assets/images/swing1.png" />
+      <img class="images" id="darkPlanet" src="assets/images/darkplanet.png" />
+      <img class="images" id="city" src="assets/images/city2.png" />
+      <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
+      <img class="images" id="ghost" src="assets/images/ghost.png" />
     </div>
-    <!-- My script(s) -->
-    <script src="js/script.js"></script>
-  </body>
+    <div id="click-icons-container">
+      <p class="icons" image="#tree" id="icon1">✣</p>
+      <p class="icons mover" image="#whiteMoth" id="icon2">✣</p>
+      <p class="icons" image="#ghostInverted" id="icon3">✣</p>
+      <p class="icons" image="#walker" id="icon4">✣</p>
+      <p class="icons" image="#wingedMan" id="icon5">✣</p>
+      <p class="icons mover" image="#sun" id="icon6">✣</p>
+      <p class="icons" image="#swingFigure" id="icon7">✣</p>
+      <p class="icons mover" image="#darkPlanet" id="icon8">✣</p>
+      <p class="icons mover" image="#smoke" id="icon9">✣</p>
+      <p class="icons" image="#city" id="icon10">✣</p>
+      <p class="icons" image="#ghost" id="icon11">✣</p>
+    </div>
+  </div>
+  <!-- My script(s) -->
+  <script src="js/script.js"></script>
+</body>
+
 </html>
