P2: renamed the files and added the comments

--- a/projects/project2-test/index.html
+++ b/projects/project2-test/index.html
@@ -21,12 +21,12 @@
       <img class="images" id="tree" src="assets/images/tree-cut.png" />
       <img class="images" id="ghostInverted" src="assets/images/ghostInverted.png" />
       <img class="images" id="smoke" src="assets/images/smoke.png" />
-      <img class="images" id="walker" src="assets/images/rope-walker-shadow2.png" />
-      <img class="images" id="wingedMan" src="assets/images/wingmanC.png" />
-      <img class="images" id="sun" src="assets/images/sun2.png" />
-      <img class="images" id="swingFigure" src="assets/images/swing1.png" />
+      <img class="images" id="walker" src="assets/images/rope-walker-shadow.png" />
+      <img class="images" id="wingedMan" src="assets/images/wingman.png" />
+      <img class="images" id="sun" src="assets/images/sun.png" />
+      <img class="images" id="swingFigure" src="assets/images/swing.png" />
       <img class="images" id="darkPlanet" src="assets/images/darkplanet.png" />
-      <img class="images" id="city" src="assets/images/city2.png" />
+      <img class="images" id="city" src="assets/images/city.png" />
       <img class="images" id="whiteMoth" src="assets/images/mothwhite.png" />
       <img class="images" id="ghost" src="assets/images/ghost.png" />
     </div>
